# render_buddy

./: Cargo.toml  README.md
examples/: basic_sprites.rs  camera.rs  rectangle.rs  text.rs
src/: arena.rs  batching.rs  camera.rs  dynamic_texture_atlas_builder.rs  errors.rs  font_atlas.rs  fonts.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  rect.rs  render_context.rs  sprite.rs  text.rs  texture.rs  texture_atlas.rs  textured_rect.rs  transform.rs
