[package]
name = "render_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
pollster = "0.2"
image = { version = "0.24.5", default-features = false, features = ["png"] }
winit = { version= "0.28.3" }

[dependencies]
raw-window-handle = "0.5.2"
wgpu = "0.15"
glam = "0.22"
bytemuck = { version = "1.13.1", features = [ "derive" ] }